--- a/config/database.yml
+++ b/config/database.yml
@@ -5,21 +5,30 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
+  adapter: mysql2
   pool: 5
-  timeout: 5000
+  host: localhost
+  encoding: utf8
+  reconnect: false
+
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  username: root
+  password: xY4742488
+  database: avantgarde_dev
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  username: root
+  password: xY4742488
+  database: pircdata
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  username: pircviz
+  password: viz4P!RC
+  database: pircdata
